--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,13 @@
 #  Distributed under the Boost Software License, Version 1.0. (See accompanying
 #  file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 
-machine:
+dependencies:
+  pre:
+    - sudo apt-get update; sudo apt-get install clang-3.5 libboost-all-dev
+
+tests:
+  pre:
+    - ls -lha
+  override:
+    - echo "yay"
+    - echo "no"
