--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
     - sudo apt-get update; sudo apt-get install clang-3.5 libboost-all-dev
     - mkdir -p /blubb
     - echo "foo" > /blubb/bar
+    - echo ${CIRCLE_NODE_INDEX}
 
 test:
   pre:
